--- a/www/index.html
+++ b/www/index.html
@@ -6,23 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tejas</title>
 
-<link rel="shortcut icon" href="assets/image/tejasiconlogo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/image/tejasiconlogo.ico" type="image/x-icon">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <!-- Particle JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
         type="text/javascript"></script>
 
-<!--texllate-->
-<link rel="stylesheet" href="assets/vindore/texllate/animate.css">
+
+    <!--texllate-->
+    <link rel="stylesheet" href="assets/vindore/texllate/animate.css">
 
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+
+    <div class="container"></div>
+
 
     <section id="oval" class="mb-4">
         <div class="row">
@@ -40,15 +47,46 @@
                         </div>
                     </div>
                 </div>
-                <h4 class="text-light text text-center">ask me some query</h4>
+                <h4 class="text-light text text-center">Hii' I am Tejas, how can I help you?</h4>
+
+
+                <div class="col-md-12">
+                    <div class="text-center">
+                        <div id="textInput" class="d-flex">
+
+                            <input type="text" name="chatbox" id="chatbox" placeholder="Tyep Here..........">
+                            <button id="micbutton" class="glow-on-hover"><i class="bi bi-mic-fill"></i></button>
+                            <button id="chatbutton" class="glow-on-hover"><i class="bi bi-chat-dots-fill"></i></button>
+                            <button id="settingbutton" class="glow-on-hover"><i class="bi bi-gear-fill"></i></button>
+                        </div>
+                    </div>
+                </div>
+
+
 
             </div>
             <div class="col-md-1"></div>
         </div>
 
     </section>
+    <section id="siriwave" class="mb-4" hidden>
 
-   	<!--Jquery  -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12"></div>
+                <div class="d-felx justify-content-center align-items-center " style="height: 200vh;">
+
+                    <div class="">
+
+                        <p class="text-start text-light mb-4 siri-message">dsfjksjdf flejf fjwlfj fljwdlf fdjsaldjflsjfslfsl jls  ldsfjgsljglgj gl slkjflsfgs </p>
+                        <div id="siri-container"></div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Jquery  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
 
@@ -59,7 +97,13 @@
 
 
     <!-- Particle JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
     <script src="script.js"></script>
+
+    <!--siri wave-->
+    <script src="https://unpkg.com/siriwave/dist/siriwave.umd.min.js"></script>
+
     <!--texllate js-->
     <script src="assets/vindore/texllate/jquery.fittext.js"></script>
     <script src="assets/vindore/texllate/jquery.lettering.js"></script>
