--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-                <h4 class="text-light text text-center">Hii' I am Tejas, how can I help you?</h4>
+                <h4 class="text-light text text-center">Hello, I am Tejas, how can I help you?</h4>
 
 
                 <div class="col-md-12">
@@ -78,7 +78,7 @@
 
                     <div class="">
 
-                        <p class="text-start text-light mb-4 siri-message">dsfjksjdf flejf fjwlfj fljwdlf fdjsaldjflsjfslfsl jls  ldsfjgsljglgj gl slkjflsfgs </p>
+                        <p class="text-start text-light mb-4 siri-message">Hello, I am Tejas, how can I help you?</p>
                         <div id="siri-container"></div>
 
                     </div>
