--- a/www/index.html
+++ b/www/index.html
@@ -62,8 +62,6 @@
                     </div>
                 </div>
 
-
-
             </div>
             <div class="col-md-1"></div>
         </div>
@@ -72,19 +70,23 @@
     <section id="siriwave" class="mb-4" hidden>
 
         <div class="container">
-            <div class="row">
-                <div class="col-md-12"></div>
-                <div class="d-felx justify-content-center align-items-center " style="height: 200vh;">
-
-                    <div class="">
-
-                        <p class="text-start text-light mb-4 siri-message">Hello, I am Tejas, how can I help you?</p>
+        <div class="row">
+            <div class="col-md-12">
+                <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;">
+                    <div style="width: 300px; height: 300px; border: 2px solid black; border-radius: 50%;"></div>
+                    <div>
+                        <p class="text-start text-light mb-4 siri-message">
+                            Hello, I am Tejas, how can I help you?
+                        </p>
                         <div id="siri-container"></div>
-
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+     <!-- Main Container to Center Content -->
+     
+
     </section>
     <!--Jquery  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
