--- a/www/index.html
+++ b/www/index.html
@@ -76,7 +76,7 @@
                     <div style="width: 300px; height: 300px; border: 2px solid black; border-radius: 50%;"></div>
                     <div>
                         <p class="text-start text-light mb-4 siri-message">
-                            Hello, I am Tejas, how can I help you?
+                            Hello==>>>I am Tejas..
                         </p>
                         <div id="siri-container"></div>
                     </div>
@@ -112,6 +112,7 @@
     <script src="http://jschr.github.io/textillate/jquery.textillate.js"></script>
 
     <script src="main.js"></script>
+    <script src="controller.js"></script>
     <script src="/eel.js"></script>
 
 
