hot word detection

--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tejas</title>
+    <title>Jarvis</title>
 
     <link rel="shortcut icon" href="assets/image/tejasiconlogo.ico" type="image/x-icon">
 
@@ -37,7 +37,7 @@
             <div class="col-md-10">
                 <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
                     <canvas id="canvasOne" width="700" height="420" style="position: absolute; z-index: -1;"></canvas>
-                    <div id="TejasHood">
+                    <div id="jarvisHood">
                         <div class="square">
                             <span></span> <!-- Outer Circle -->
                             <span style="animation-duration: 8s;"></span> <!-- Slower Rotating Circle -->
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-                <h4 class="text-light text text-center">Hello, I am Tejas, how can I help you?</h4>
+                <h4 class="text-light text text-center">Hello, I am jarvis, how can I help you?</h4>
 
 
                 <div class="col-md-12">
@@ -76,7 +76,7 @@
                     <div style="width: 300px; height: 300px; border: 2px solid black; border-radius: 50%;"></div>
                     <div>
                         <p class="text-start text-light mb-4 siri-message">
-                            Hello==>>>I am Tejas..
+                            Hello==>>>I am Jarvis..
                         </p>
                         <div id="siri-container"></div>
                     </div>
