--- a/www/index.html
+++ b/www/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>anugat</title>
+    <title>sathi</title>
 
-    <link rel="shortcut icon" href="assets/image/anugatlogo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/image/sathilogo.ico" type="image/x-icon">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -38,7 +38,7 @@
                     <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
                         <canvas id="canvasOne" width="700" height="420"
                             style="position: absolute; z-index: -1;"></canvas>
-                        <div id="anugatHood">
+                        <div id="sathiHood">
                             <div class="square">
                                 <span></span> <!-- Outer Circle -->
                                 <span style="animation-duration: 8s;"></span> <!-- Slower Rotating Circle -->
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                     </div>
-                    <h4 class="text-light text text-center">Hello, I am anugat, how can I help you?</h4>
+                    <h4 class="text-light text text-center">Hello, I am sathi, how can I help you?</h4>
 
 
                     <div class="col-md-12">
@@ -89,7 +89,7 @@
                             </div>
                             <div>
                                 <p class="text-start text-light mb-4 siri-message">
-                                    Hello==>>>I am anugat..
+                                    Hello==>>>I am sathi..
                                 </p>
                                 <div id="siri-container"></div>
                             </div>
